--- a/sleep calculator/index.html
+++ b/sleep calculator/index.html
@@ -14,7 +14,7 @@
                 </div>
             </header>
             <section class="calculator">
-                <div class="container calculator__wrap">
+                <div id="1" class="container calculator__wrap">
                     <div class="calculator__header">
                         Время сна
                     </div>
@@ -23,80 +23,80 @@
                         Хочу проснуться в...
                     </div>
                         <div class="calculator__time">
-                            <div class="select">
-                                <div class="select__selected-option calculator__time-wrap calculator__hour">
+                            <div class="select" id="s1">
+                                <div id="start_select1" class="select__selected-option calculator__time-wrap calculator__hour">
                                     07
                                 </div>
-                                <div class="select__dropdown" style="display: none;">
-                                    <div class="select__option">
+                                <div class="select__dropdown" id="select1" style="display: none;">
+                                    <div class="select__option1">
                                         00
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         01
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         02
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         03
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         04
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         05
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         06
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         07
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         08
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         09
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         10
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         11
-                                    </div><div class="select__option">
+                                    </div><div class="select__option1">
                                         12
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         13
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         14
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         15
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         16
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         17
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         18
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         19
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         20
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         21
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                     22
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option1">
                                         23
                                     </div>
                                 </div>
@@ -104,68 +104,134 @@
                             <div class="calculator__separator">
                                 :
                             </div>
-                            <div class="select">
-                                <div class="select__selected-option calculator__time-wrap calculator__minute">
+                            <div class="select" id="s2">
+                                <div id="start_select2" class="select__selected-option calculator__time-wrap calculator__minute">
                                     00
                                 </div>
-                                <div class="select__dropdown select__dropdown--left" style="display: none;">
-                                    <div class="select__option">
+                                <div class="select__dropdown select__dropdown--left" id="select2" style="display: none;">
+                                    <div class="select__option2">
                                         00
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         05
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         10
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         15
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                     20
                                 </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         25
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         30
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         35
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         40
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         45
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         50
                                     </div>
-                                    <div class="select__option">
+                                    <div class="select__option2">
                                         55
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="calculator__btn">Рассчитать</div>
+                    <div id="Calculate" class="calculator__btn">Рассчитать</div>
                     <div class="calculator__text">или</div>
                     <div class="calculator__type">
                         <div class="calculator__title">Во сколько вставать, если ложусь спать прямо сейчас…</div>
                     </div>
-                    <div class="calculator__btn">Z z z</div>
-                <!---->
-                <!---->
+                    <div class="calculator__btnZzz">Z z z
+
+                    </div>
+                </div>
+
+                <div id="2" class="container result__wrap">
+                    <div class="result__header calculator__header">Время сна
+                    </div>
+                    <div class="result__title calculator__title">Ложитесь спать в это время:
+                    </div>
+                    <div class="result__times"><div class="result__time">22:00
+                    </div>
+                        <div class="result__time">23:30
+                    </div>
+                        <div class="result__time">01:00
+                        </div>
+                        <div class="result__time">02:30
+                        </div>
+                        <div class="result__time">04:00
+                        </div>
+                        <div class="result__time">05:30
+                        </div>
+                    </div>
+                    <p class="result__text">Можно спать 10 часов и встать разбитым, а можно подремать совсем чуть-чуть и совершать подвиги.
+                    </p>
+                    <p class="result__text">Хороший сон состоит из 5–6 полных циклов. Чтобы встать в бодром состоянии, запланируйте пробуждение в конце цикла. Учтите: обычно, чтобы заснуть, человеку нужно 14&nbsp;минут.
+                    </p>
+                    <p class="result__text">Приятных снов. И не забудьте завести будильник!
+                    </p>
+                    <div class="result__restart1">
+                        Назад
+                    </div>
+                </div>
+
+                <div id="3" class="container result__wrap3">
+                    <div class="result__header calculator__header">Время сна
+                    </div>
+                    <div class="result__title calculator__title">Заведите будильник на это время:
+                    </div>
+                    <div class="result__times">
+                        <div class="result__time">06:44
+                        </div>
+                        <div class="result__time">08:14
+                        </div>
+                        <div class="result__time">09:44
+                        </div>
+                        <div class="result__time">11:14
+                        </div>
+                        <div class="result__time">12:44
+                        </div>
+                        <div class="result__time">14:14
+                        </div>
+                    </div>
+                    <p class="result__text">Можно спать 10 часов и встать разбитым, а можно подремать совсем чуть-чуть и совершать подвиги.
+                    </p>
+                    <p class="result__text">Хороший сон состоит из 5–6 полных циклов. Чтобы встать в бодром состоянии, запланируйте пробуждение в конце цикла. Учтите: обычно, чтобы заснуть, человеку нужно 14&nbsp;минут.
+                    </p>
+                    <p class="result__text">Приятных снов. И не забудьте завести будильник!
+                    </p>
+                    <div class="result__restart2">
+                        Назад
+                    </div>
+                </div>
+
+
+
+
+
             </section>
             <section class="share"></section>
-            <footer class="footer">
-                <div class="container footer__wrap">
-                    <span>©&nbsp;2022&nbsp;</span>
-                    <a href="https://github.com/bag-huyag" target="_blank">bag-huyag</a>
-                </div>
-            </footer>
+
         </section>
+        <footer class="footer">
+            <div class="container footer__wrap">
+                <span>©&nbsp;2022&nbsp;</span>
+                <a href="https://github.com/bag-huyag" target="_blank">bag-huyag</a>
+            </div>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
