--- a/sleep calculator/index.html
+++ b/sleep calculator/index.html
@@ -14,7 +14,7 @@
                 </div>
             </header>
             <section class="calculator">
-                <div class="container calculator__wrap">
+                <div id="1" class="container calculator__wrap">
                     <div class="calculator__header">
                         Время сна
                     </div>
@@ -149,23 +149,89 @@
                             </div>
                         </div>
                     </div>
-                    <div class="calculator__btn">Рассчитать</div>
+                    <div id="Calculate" class="calculator__btn">Рассчитать</div>
                     <div class="calculator__text">или</div>
                     <div class="calculator__type">
                         <div class="calculator__title">Во сколько вставать, если ложусь спать прямо сейчас…</div>
                     </div>
-                    <div class="calculator__btn">Z z z</div>
-                <!---->
-                <!---->
+                    <div class="calculator__btnZzz">Z z z
+
+                    </div>
+                </div>
+
+                <div id="2" class="container result__wrap">
+                    <div class="result__header calculator__header">Время сна
+                    </div>
+                    <div class="result__title calculator__title">Ложитесь спать в это время:
+                    </div>
+                    <div class="result__times"><div class="result__time">22:00
+                    </div>
+                        <div class="result__time">23:30
+                    </div>
+                        <div class="result__time">01:00
+                        </div>
+                        <div class="result__time">02:30
+                        </div>
+                        <div class="result__time">04:00
+                        </div>
+                        <div class="result__time">05:30
+                        </div>
+                    </div>
+                    <p class="result__text">Можно спать 10 часов и встать разбитым, а можно подремать совсем чуть-чуть и совершать подвиги.
+                    </p>
+                    <p class="result__text">Хороший сон состоит из 5–6 полных циклов. Чтобы встать в бодром состоянии, запланируйте пробуждение в конце цикла. Учтите: обычно, чтобы заснуть, человеку нужно 14&nbsp;минут.
+                    </p>
+                    <p class="result__text">Приятных снов. И не забудьте завести будильник!
+                    </p>
+                    <div class="result__restart1">
+                        Назад
+                    </div>
+                </div>
+
+                <div id="3" class="container result__wrap3">
+                    <div class="result__header calculator__header">Время сна
+                    </div>
+                    <div class="result__title calculator__title">Заведите будильник на это время:
+                    </div>
+                    <div class="result__times">
+                        <div class="result__time">06:44
+                        </div>
+                        <div class="result__time">08:14
+                        </div>
+                        <div class="result__time">09:44
+                        </div>
+                        <div class="result__time">11:14
+                        </div>
+                        <div class="result__time">12:44
+                        </div>
+                        <div class="result__time">14:14
+                        </div>
+                    </div>
+                    <p class="result__text">Можно спать 10 часов и встать разбитым, а можно подремать совсем чуть-чуть и совершать подвиги.
+                    </p>
+                    <p class="result__text">Хороший сон состоит из 5–6 полных циклов. Чтобы встать в бодром состоянии, запланируйте пробуждение в конце цикла. Учтите: обычно, чтобы заснуть, человеку нужно 14&nbsp;минут.
+                    </p>
+                    <p class="result__text">Приятных снов. И не забудьте завести будильник!
+                    </p>
+                    <div class="result__restart2">
+                        Назад
+                    </div>
+                </div>
+
+
+
+
+
             </section>
             <section class="share"></section>
-            <footer class="footer">
-                <div class="container footer__wrap">
-                    <span>©&nbsp;2022&nbsp;</span>
-                    <a href="https://github.com/bag-huyag" target="_blank">bag-huyag</a>
-                </div>
-            </footer>
+
         </section>
+        <footer class="footer">
+            <div class="container footer__wrap">
+                <span>©&nbsp;2022&nbsp;</span>
+                <a href="https://github.com/bag-huyag" target="_blank">bag-huyag</a>
+            </div>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
