--- a/sleep calculator/index.html
+++ b/sleep calculator/index.html
@@ -101,7 +101,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="calculator__separator">
+                            <div class="select" id="s">
                                 :
                             </div>
                             <div class="select" id="s2">
@@ -164,17 +164,36 @@
                     </div>
                     <div class="result__title calculator__title">Ложитесь спать в это время:
                     </div>
-                    <div class="result__times"><div class="result__time">22:00
-                    </div>
-                        <div class="result__time">23:30
-                    </div>
-                        <div class="result__time">01:00
+                    <div class="result__times">
+                        <div class="result__time">
+                            <div class="result__timeH">22</div>
+                            :
+                            <div class="result__timeM">00</div>
                         </div>
-                        <div class="result__time">02:30
+                        <div class="result__time">
+                            <div class="result__timeH">23</div>
+                            :
+                            <div class="result__timeM">30</div>
                         </div>
-                        <div class="result__time">04:00
+                        <div class="result__time">
+                            <div class="result__timeH">01</div>
+                            :
+                            <div class="result__timeM">00</div>
                         </div>
-                        <div class="result__time">05:30
+                        <div class="result__time">
+                            <div class="result__timeH">02</div>
+                            :
+                            <div class="result__timeM">30</div>
+                        </div>
+                        <div class="result__time">
+                            <div class="result__timeH">04</div>
+                            :
+                            <div class="result__timeM">00</div>
+                        </div>
+                        <div class="result__time">
+                            <div class="result__timeH">05</div>
+                            :
+                            <div class="result__timeM">30</div>
                         </div>
                     </div>
                     <p class="result__text">Можно спать 10 часов и встать разбитым, а можно подремать совсем чуть-чуть и совершать подвиги.
@@ -194,17 +213,17 @@
                     <div class="result__title calculator__title">Заведите будильник на это время:
                     </div>
                     <div class="result__times">
-                        <div class="result__time">06:44
+                        <div class="result__timeZ">06:44
                         </div>
-                        <div class="result__time">08:14
+                        <div class="result__timeZ">08:14
                         </div>
-                        <div class="result__time">09:44
+                        <div class="result__timeZ">09:44
                         </div>
-                        <div class="result__time">11:14
+                        <div class="result__timeZ">11:14
                         </div>
-                        <div class="result__time">12:44
+                        <div class="result__timeZ">12:44
                         </div>
-                        <div class="result__time">14:14
+                        <div class="result__timeZ">14:14
                         </div>
                     </div>
                     <p class="result__text">Можно спать 10 часов и встать разбитым, а можно подремать совсем чуть-чуть и совершать подвиги.
